Devops.Trabalho1/etc/kubernetes/ingress/trabalho1-angular-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trabalho1-angular-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
    - hosts:
        - k8s.local
      secretName: trabalho1-certs-secrets

  rules:
    - host: k8s.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trabalho1-angular
                port:
                  number: 443
